addons/care_config_relaunch_v2/static/src/css/care_multistep.css
/* ... */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban:-moz-placeholder {
/* Mozilla Firefox 4 to 18 */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::-moz-placeholder {
/* Mozilla Firefox 19+ */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban:-ms-input-placeholder {
/* Internet Explorer 10+ */
    color: transparent;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#frst_iban::placeholder {
    color: transparent;
}

/* Button styles for multi-step only */
body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
.btn {
    padding: 16px !important;
}

body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
#button_paynow {
    width: 100%;
}

